# realtime_app

./: .env  Makefile  ReadMe.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  __main__.py  constants.py
app/api/handlers/: __init__.py  web_socket_handler.py
app/connectors/: __init__.py  rabbit.py
app/routers/: __init__.py  websocket_urls.py
app/workers/: generator.py
front/front/: package-lock.json  package.json
front/front/src/: App.js
